[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/block_editor/condition/entry.gd" type="Script" id=1]
[ext_resource path="res://scenes/block_editor/condition/body.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/time_and_space/TimeandSpace-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 15
font_data = ExtResource( 3 )

[node name="Entry" type="HBoxContainer"]
margin_right = 253.0
margin_bottom = 26.0
custom_constants/separation = 5
script = ExtResource( 1 )

[node name="ConditionBody" parent="." instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 41.0
margin_bottom = 26.0

[node name="BooleanButton" type="OptionButton" parent="."]
margin_left = 46.0
margin_right = 87.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )

[node name="RemoveButton" type="Button" parent="."]
margin_left = 92.0
margin_right = 122.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
text = "del"

[node name="AddButton" type="Button" parent="."]
margin_left = 127.0
margin_right = 163.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
text = "new"

[connection signal="pressed" from="RemoveButton" to="." method="_on_remove_button_pressed"]
[connection signal="pressed" from="AddButton" to="." method="_on_add_button_pressed"]
